# alpc-research

./: .gitignore  CMakeLists.txt  README.md  client.cpp  server.cpp
details/: ntalpcapi.h
